--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "faker": "^3.1.0",
+    "lodash": "^4.14.2",
     "meteor-node-stubs": "^0.2.3",
     "radium": "^0.18.1",
     "react": "^15.3.0",
