--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "meteor-node-stubs": "^0.2.3",
     "radium": "^0.18.1",
     "react": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.0",
     "react-dom": "^15.3.0"
   }
 }
